Edit Mode - Move along axis while mouse dragging does not correctly display distance units #90911

Closed
opened 2021-08-25 10:46:40 +02:00 by Alexandre Mano · 7 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2060

Blender Version
Broken: 3.0.0 Alpha, 5ef3afd87c, master 2021-08-24
Worked: 3.0.0 Alpha, 899935d5d0, master, 2021-08-15
Caused by 7192e57d63

Short description of error
In edit mode, during vertex, edge and face move while locked on axis, the displayed moved units value always appears as 0m when dragging with mouse.
Moving while inputing specific numerical values works as it is supposed to.

Exact steps for others to reproduce the error

  • Open blender (factory or non-factory startup)
  • Add a cube
  • Switch to edit mode
  • Select a vertex, edge or face,
  • Press {key G} key to move
  • Press any of the "x" "y" or "z" keys to lock on an axis (Shift + keys also results in error),
  • Drag around with mouse, moved values stays at 0 m on the top left corner of the window.
Before moving After moving
screen11.png screen22.png
**System Information** Operating system: Windows 10 Graphics card: RTX 2060 **Blender Version** Broken: 3.0.0 Alpha, 5ef3afd87c54, master 2021-08-24 Worked: 3.0.0 Alpha, 899935d5d024, master, 2021-08-15 Caused by 7192e57d63 **Short description of error** In edit mode, during vertex, edge and face move while locked on axis, the displayed moved units value always appears as 0m when dragging with mouse. Moving while inputing specific numerical values works as it is supposed to. **Exact steps for others to reproduce the error** - Open blender (factory or non-factory startup) - Add a cube - Switch to edit mode - Select a vertex, edge or face, - Press {key G} key to move - Press any of the "x" "y" or "z" keys to lock on an axis (Shift + keys also results in error), - Drag around with mouse, moved values stays at 0 m on the top left corner of the window. | Before moving | After moving | | -- | -- | | ![screen11.png](https://archive.blender.org/developer/F10323318/screen11.png)| ![screen22.png](https://archive.blender.org/developer/F10323317/screen22.png) |
Author

Added subscriber: @Xande

Added subscriber: @Xande
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm on master: (f80c39b74e).

Will find the culprit commit...

Thanks for the report. I can confirm on master: (`f80c39b74e`). Will find the culprit commit...
Member

Caused by 7192e57d63

(Cause of this issue is known so marking it a high priority issue)

Unsure if #modeling is correct tag

Caused by 7192e57d63 (Cause of this issue is known so marking it a high priority issue) Unsure if #modeling is correct tag

This issue was referenced by 0d36439f95

This issue was referenced by 0d36439f95c0f3c320ebfd429ee8085dd8a6ebc0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-08-25 17:46:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90911
No description provided.