Fix T90911: Move along axis does not display real distance units

Variable was wrongly set to 0.
Caused by {rB7192e57d63a5}.